add job apis
