# docs/swagger.json
@@ -1,11 +1,27 @@
 {
+    "schemes": [
+        "http",
+        "https"
+    ],
     "swagger": "2.0",
     "info": {
-        "contact": {},
-        "license": {}
+        "description": "This is a go-monitor server.",
+        "title": "Go Monitor api docs",
+        "termsOfService": "http://swagger.io/terms/",
+        "contact": {
+            "name": "API Support",
+            "url": "http://www.swagger.io/support",
+            "email": "thaitanloi365@gmail.com"
+        },
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        },
+        "version": "1.0"
     },
+    "host": "localhost:8080",
     "paths": {
-        "/api/v1/docker/container/list": {
+        "/api/v1/admin/docker/container/list": {
             "get": {
                 "description": "Get list docker container",
                 "consumes": [
@@ -15,10 +31,146 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Docker"
+                    "Admin-Docker"
                 ],
                 "summary": "Get list docker container",
                 "responses": {}
+            }
+        },
+        "/api/v1/admin/job/add_healthcheck": {
+            "post": {
+                "description": "Add healthcheck job",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Admin-Job"
+                ],
+                "summary": "Add healthcheck job",
+                "parameters": [
+                    {
+                        "description": "Form",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.HealthcheckJobCreateForm"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/api/v1/admin/job/list": {
+            "get": {
+                "description": "Get list scheduled jobs",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Admin-Job"
+                ],
+                "summary": "Get list scheduled jobs",
+                "responses": {}
+            }
+        },
+        "/api/v1/admin/job/{tag}": {
+            "delete": {
+                "description": "Remove job by tag",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Admin-Job"
+                ],
+                "summary": "Remove job by tag",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Tag of job",
+                        "name": "tag",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/api/v1/admin/login": {
+            "post": {
+                "description": "Login",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Admin-Authorization"
+                ],
+                "summary": "Login",
+                "parameters": [
+                    {
+                        "description": "User Data",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.LoginForm"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.LoginResponse"
+                        },
+                        "headers": {
+                            "Bearer": {
+                                "type": "string",
+                                "description": "OK"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/admin/me/logout": {
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Logout",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Admin-Me"
+                ],
+                "summary": "Logout",
+                "responses": {
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/errs.Error"
+                        }
+                    }
+                }
             }
         },
         "/api/v1/docker/container/{id}": {
@@ -70,50 +222,123 @@
                 ],
                 "responses": {}
             }
-        },
-        "/api/v1/login": {
-            "post": {
-                "description": "Login",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Authorization"
-                ],
-                "summary": "Login",
-                "parameters": [
-                    {
-                        "description": "User Data",
-                        "name": "data",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.LoginForm"
-                        }
-                    }
-                ],
-                "responses": {}
-            }
         }
     },
     "definitions": {
-        "models.LoginForm": {
+        "errs.Error": {
             "type": "object",
-            "required": [
-                "password",
-                "username"
-            ],
             "properties": {
-                "password": {
-                    "type": "string"
+                "code": {
+                    "type": "integer"
                 },
-                "username": {
+                "header": {
+                    "type": "integer"
+                },
+                "message": {
                     "type": "string"
                 }
             }
+        },
+        "models.HealthcheckJobCreateForm": {
+            "type": "object",
+            "required": [
+                "interval",
+                "tag",
+                "timeout"
+            ],
+            "properties": {
+                "endpoint": {
+                    "type": "string",
+                    "example": "http://localhost:8080"
+                },
+                "interval": {
+                    "type": "integer",
+                    "example": 30
+                },
+                "tag": {
+                    "type": "string",
+                    "example": "api_healthcheck"
+                },
+                "timeout": {
+                    "type": "integer",
+                    "example": 20
+                }
+            }
+        },
+        "models.LoginForm": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.LoginResponse": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                },
+                "user": {
+                    "type": "object",
+                    "$ref": "#/definitions/models.User"
+                }
+            }
+        },
+        "models.User": {
+            "type": "object",
+            "properties": {
+                "avatar": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "integer"
+                },
+                "deleted_at": {
+                    "type": "integer"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "last_login": {
+                    "type": "integer"
+                },
+                "last_name": {
+                    "type": "string"
+                },
+                "logged_out_at": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "timezone": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "integer"
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
