# main.go
@@ -4,57 +4,27 @@ import (
 	"github.com/thaitanloi365/go-monitor/cmd"
 )
 
+// @title Go Monitor api docs
+// @version 1.0
+// @description This is a go-monitor server.
+// @termsOfService http://swagger.io/terms/
+
+// @contact.name API Support
+// @contact.url http://www.swagger.io/support
+// @contact.email thaitanloi365@gmail.com
+
+// @license.name Apache 2.0
+// @license.url http://www.apache.org/licenses/LICENSE-2.0.html
+
+// @schemes https http
+
+// @securityDefinitions.apikey ApiKeyAuth
+// @in header
+// @name Authorization
+
+// @host localhost:8080
+// @schemes http https
 func main() {
 	cmd.Execute()
-	// os.Setenv("DOCKER_HOST", "unix:///var/run/docker.sock")
-	// cli, err := client.NewEnvClient()
-	// if err != nil {
-	// 	panic(err)
-	// }
-
-	// list, err := cli.ContainerList(context.Background(), types.ContainerListOptions{
-	// 	All: true,
-	// })
-	// if err != nil {
-	// 	panic(err)
-	// }
-
-	// for _, item := range list {
-	// 	fmt.Println(item)
-
-	// }
-
-	// reader, err := cli.ContainerLogs(context.Background(), "ezielog-backend", types.ContainerLogsOptions{
-	// 	ShowStdout: true,
-	// 	ShowStderr: true,
-	// 	Follow:     true,
-	// 	Timestamps: false,
-	// })
-	// if err != nil {
-	// 	panic(err)
-	// }
-
-	// scanner := bufio.NewScanner(reader)
-	// e := echo.New()
-	// e.GET("/", func(c echo.Context) error {
-	// 	c.Response().Header().Set(echo.HeaderContentType, echo.MIMEApplicationJSON)
-	// 	c.Response().WriteHeader(http.StatusOK)
-
-	// 	// enc := json.NewDecoder(c.Response())
-	// 	for scanner.Scan() {
-	// 		c.Response().Write([]byte(scanner.Text()))
-	// 		// var s = map[string]interface{}{
-	// 		// 	"sss": scanner.Text(),
-	// 		// }
-
-	// 		// if err := enc.Encode(s); err != nil {
-	// 		// 	fmt.Println(err)
-	// 		// }
-	// 		c.Response().Flush()
-	// 	}
-
-	// 	return nil
-	// })
-	// e.Logger.Fatal(e.Start(":1323"))
 
 }
